--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -8,29 +8,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "3d8c0f38-18ef-49d8-b5fa-5048327a736d"
+        "outputId": "07629819-a342-4c91-b3ec-c081a5ee85c2"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Connecting to archive.ubuntu.com (91.189.91.82)] [Waiting for headers] [1 InRelease 0 B/3,626 B \r0% [Connecting to archive.ubuntu.com (91.189.91.82)] [Waiting for headers] [Connecting to ppa.launch\r                                                                                                    \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+            "\r0% [Waiting for headers] [1 InRelease 12.7 kB/110 kB 12%] [Connected to cloud.r-project.org (18.160.\r                                                                                                    \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
             "Hit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
             "Get:4 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
-            "Get:5 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+            "Hit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
             "Get:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [109 kB]\n",
             "Get:7 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ Packages [44.8 kB]\n",
             "Hit:8 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,274 kB]\n",
+            "Get:9 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,009 kB]\n",
             "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [1,400 kB]\n",
-            "Hit:11 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Get:12 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,009 kB]\n",
-            "Hit:13 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Get:14 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,131 kB]\n",
+            "Get:11 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,131 kB]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,274 kB]\n",
+            "Hit:13 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Hit:14 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
             "Hit:15 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Fetched 5,200 kB in 2s (2,498 kB/s)\n",
+            "Fetched 5,200 kB in 2s (2,283 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wOJqxG_RPSwp",
-        "outputId": "35ce3071-d103-4ae2-e8fe-3e9c597430f2"
+        "outputId": "3553acd5-3dda-4713-fe98-f7d4c8aad1c5"
       },
       "outputs": [
         {
@@ -148,7 +148,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L6fkwOeOmqvq",
-        "outputId": "f5c39a03-1048-42bc-d2db-c6e0c94473b6"
+        "outputId": "af86deff-d289-478b-afc1-5602f0c34436"
       },
       "outputs": [
         {
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8p_tUS8h8it",
-        "outputId": "4101b727-35de-4522-aed5-fdc7016f2ed6"
+        "outputId": "c5127b6d-4b87-41d1-fd9c-0fd7ae272484"
       },
       "outputs": [
         {
@@ -222,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-Eytz64liDU",
-        "outputId": "f265b2da-ba9e-4bbb-8c85-802765dc04e8"
+        "outputId": "0b27742b-2c6c-422e-a172-d62c59a4c587"
       },
       "outputs": [
         {
@@ -256,13 +256,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "4c2040a8-228e-4926-bca5-66bb258831ec"
+        "outputId": "50aca073-0ed6-440a-9882-00528637478a"
       },
       "outputs": [
         {
@@ -295,7 +295,7 @@
             "+----+--------------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.6138303279876709 seconds ---\n"
+            "--- 1.0798399448394775 seconds ---\n"
           ]
         }
       ],
@@ -321,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAhk3ZD2tFy8",
-        "outputId": "75f5df96-fdc4-4beb-892f-c2222e1b9768"
+        "outputId": "4a3443bf-7df7-4012-92a3-c25be54df310"
       },
       "outputs": [
         {
@@ -348,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4opVhbvxtL-i",
-        "outputId": "444a6893-c923-41d7-e5f1-8fb7e30fddea"
+        "outputId": "803e6980-9939-4f74-90f8-3f0d29c28be9"
       },
       "outputs": [
         {
@@ -375,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "fa4f95b3-345e-43fc-e5d8-3b047f55b1c6"
+        "outputId": "7ef76d1d-9d48-4dc3-f43a-ae7606a4452b"
       },
       "outputs": [
         {
@@ -385,30 +385,30 @@
             "+----+--------------------+\n",
             "|view|round(avg(price), 2)|\n",
             "+----+--------------------+\n",
-            "|   0|           403848.51|\n",
-            "|   1|           401044.25|\n",
-            "|  10|           401868.43|\n",
-            "| 100|           1026669.5|\n",
-            "|  11|           399548.12|\n",
-            "|  12|           401501.32|\n",
-            "|  13|           398917.98|\n",
-            "|  14|           398570.03|\n",
+            "|   7|           403005.77|\n",
+            "|  51|           788128.21|\n",
             "|  15|            404673.3|\n",
-            "|  16|           399586.53|\n",
-            "|  17|           398474.49|\n",
-            "|  18|           399332.91|\n",
-            "|  19|           398953.17|\n",
-            "|   2|           397389.25|\n",
-            "|  20|           399522.81|\n",
-            "|  21|           399758.88|\n",
+            "|  54|           798684.82|\n",
+            "|  11|           399548.12|\n",
+            "|  29|           397771.65|\n",
+            "|  69|           750537.94|\n",
+            "|  42|            396964.5|\n",
+            "|  87|           1072285.2|\n",
+            "|  73|           752861.18|\n",
+            "|  64|           767036.67|\n",
+            "|   3|            398867.6|\n",
+            "|  30|            397862.0|\n",
+            "|  34|           401419.75|\n",
+            "|  59|            791453.0|\n",
+            "|   8|           398592.71|\n",
+            "|  28|           402124.62|\n",
             "|  22|           402022.68|\n",
-            "|  23|           403411.92|\n",
-            "|  24|           400284.92|\n",
-            "|  25|           401298.69|\n",
+            "|  85|          1056336.74|\n",
+            "|  16|           399586.53|\n",
             "+----+--------------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.6339597702026367 seconds ---\n"
+            "--- 0.7287545204162598 seconds ---\n"
           ]
         }
       ],
@@ -421,8 +421,7 @@
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price),2)\\\n",
         "            FROM sales\\\n",
         "            WHERE price>=350000\\\n",
-        "            GROUP BY view\\\n",
-        "            ORDER BY view\"\"\").show()\n",
+        "            GROUP BY view\"\"\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
@@ -460,7 +459,7 @@
       "outputs": [],
       "source": [
         "# 12. Create a temporary table for the parquet data.\n",
-        "parquet_sales.createOrReplaceTempView(\"parquet_sales\")"
+        "parquet_sales.createOrReplaceTempView(\"sales_parquet\")"
       ]
     },
     {
@@ -471,7 +470,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "08c23982-1688-44fc-f3af-79d38600591b"
+        "outputId": "5323c2c1-f1a9-48f3-9e79-dd30ca274c4d"
       },
       "outputs": [
         {
@@ -504,7 +503,7 @@
             "+----+--------------------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 1.5066816806793213 seconds ---\n"
+            "--- 1.4622197151184082 seconds ---\n"
           ]
         }
       ],
@@ -516,7 +515,7 @@
         "start_time = time.time()\n",
         "\n",
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price),2)\\\n",
-        "            FROM parquet_sales\\\n",
+        "            FROM sales_parquet\\\n",
         "            WHERE price>=350000\\\n",
         "            GROUP BY view\\\n",
         "            ORDER BY view\"\"\").show()\n",
@@ -532,7 +531,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hjjYzQGjtbq8",
-        "outputId": "b28fc065-149c-48a5-cd42-0a724ac3bbdf"
+        "outputId": "6395c58b-20a5-4f36-e402-f5140590a1d5"
       },
       "outputs": [
         {
@@ -553,13 +552,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sy9NBvO7tlmm",
-        "outputId": "03177314-e107-4cb3-8e03-96b96538a441"
+        "outputId": "cbbb1ff8-b74b-4d69-c99c-373447b9f08f"
       },
       "outputs": [
         {
@@ -568,7 +567,7 @@
               "False"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
